tests/NormalTests/paczka1/fuzzy1/22590440.err
Error in line 3: xpyUU4im A465 30,8
Error in line 5: IDphV0Re A465 147,5
Error in line 11: IDphV0Re S545 71,4
Error in line 2: A848 A465 20,9
Error in line 34: XbOZJ8w S545 44,1
Error in line 36: XbOZJ8w A848 21,4
